log
Fri Mar 20 05:44:09 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
31487a6
Fri Mar 20 06:10:32 PM UTC 2026: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:29: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   79 |    Stack* auxiliary_stack = createStack();
      |                             ^~~~~~~~~~~
      |                             create_stack
exercises.c:79:29: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:80:23: error: implicit declaration of function ‘Top’; did you mean ‘top’? [-Wimplicit-function-declaration]
   80 |    void* elementTop = Top(P1);
      |                       ^~~
      |                       top
exercises.c:80:23: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:84:18: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   84 |       elementTop = Top(P1);
      |                  ^
exercises.c:86:15: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   86 |    elementTop = Top(auxiliary_stack);
      |               ^
exercises.c:91:18: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   91 |       elementTop = Top(auxiliary_stack);
      |                  ^
d7cdba9
Fri Mar 20 06:11:18 PM UTC 2026: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:29: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   79 |    Stack* auxiliary_stack = createStack();
      |                             ^~~~~~~~~~~
      |                             create_stack
exercises.c:79:29: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
cc63e3d
Fri Mar 20 06:12:04 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
84d2ade
Sat Mar 21 01:50:04 PM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:42: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   48 |       L = (List*) realloc (L, i * sizeof(List));
      |                                          ^~~~
exercises.c:49:7: error: implicit declaration of function ‘PushCurrent’; did you mean ‘pushCurrent’? [-Wimplicit-function-declaration]
   49 |       PushCurrent(L, i);
      |       ^~~~~~~~~~~
      |       pushCurrent
8d9b3c4
Sat Mar 21 01:51:10 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:42: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   48 |       L = (List*) realloc (L, i * sizeof(List));
      |                                          ^~~~
exercises.c:49:22: error: passing argument 2 of ‘pushCurrent’ makes pointer from integer without a cast [-Wint-conversion]
   49 |       pushCurrent(L, i);
      |                      ^
      |                      |
      |                      int
In file included from exercises.c:6:
arraylist.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushCurrent(List *L, void *dato);
      |                           ~~~~~~^~~~
c0e66c3
Sat Mar 21 01:52:18 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:42: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   48 |       L = (List*) realloc (L, i * sizeof(List));
      |                                          ^~~~
5e31f2e
Sat Mar 21 01:59:12 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3b88d79
Sat Mar 21 02:19:51 PM UTC 2026: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:71:27: error: ‘Null’ undeclared (first use in this function)
   71 |    } while(current_elem !=Null);
      |                           ^~~~
exercises.c:71:27: note: each undeclared identifier is reported only once for each function it appears in
08f3d8f
Sat Mar 21 02:20:10 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
becfb35
Sat Mar 21 02:20:42 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 30/70
39c9743
Sat Mar 21 02:42:24 PM UTC 2026: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:23: error: expected ‘;’ before ‘}’ token
   89 |          popCurrent(L)
      |                       ^
      |                       ;
   90 |       }
      |       ~                
7a7871d
Sat Mar 21 02:42:41 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
0443eab
Sat Mar 21 11:35:58 PM UTC 2026: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:128:11: error: unused variable ‘auxiliary_stack’ [-Werror=unused-variable]
  128 |    Stack* auxiliary_stack = create_stack();
      |           ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
3c0003d
Sat Mar 21 11:36:09 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b5885eb
Sun Mar 22 12:18:47 AM UTC 2026: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:137:35: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  137 |             push(auxiliary_stack, (void*)(c);
      |                                   ^
exercises.c:137:45: error: expected ‘)’ before ‘;’ token
  137 |             push(auxiliary_stack, (void*)(c);
      |                 ~                           ^
      |                                             )
exercises.c:138:19: error: expected ‘;’ before ‘}’ token
  138 |             break;
      |                   ^
      |                   ;
  139 |          }
      |          ~         
exercises.c:147:31: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
  147 |             char elementTop = (char)pop(auxiliary_stack);
      |                               ^
cc1: all warnings being treated as errors
4cd3377
Sun Mar 22 12:19:44 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:137:35: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  137 |             push(auxiliary_stack, (void*)(c));
      |                                   ^
exercises.c:147:31: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
  147 |             char elementTop = (char)pop(auxiliary_stack);
      |                               ^
cc1: all warnings being treated as errors
221fc7c
Sun Mar 22 12:28:42 AM UTC 2026: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:140:45: error: expected ‘)’ before ‘;’ token
  140 |             push(auxiliary_stack, (void*)ptr;
      |                 ~                           ^
      |                                             )
exercises.c:141:19: error: expected ‘;’ before ‘}’ token
  141 |             break;
      |                   ^
      |                   ;
  142 |          }
      |          ~         
exercises.c:131:10: error: unused variable ‘ptr’ [-Werror=unused-variable]
  131 |    char *ptr;
      |          ^~~
cc1: all warnings being treated as errors
22f1935
Sun Mar 22 12:29:08 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:131:10: error: unused variable ‘ptr’ [-Werror=unused-variable]
  131 |    char *ptr;
      |          ^~~
cc1: all warnings being treated as errors
b8bd7ab
